fix(modal): fix wrong class name and incorrect no-wrap

--- a/src/styles/components/no-internet.sass
+++ b/src/styles/components/no-internet.sass
@@ -9,8 +9,10 @@
     &__title
         font-size: 60px
         font-weight: 800
-        white-space: nowrap
         color: $color-new-peach
+
+        +media-breakpoint-up(md)
+            white-space: nowrap
 
     &__subtitle
         font-size: 25px
